# ortho-residual

./: .gitignore  README.md  base.py  connect.py  data_utils.py  extract_features.py  ortho_models.py  preactresnet.py  pyproject.toml  requirements.txt  train_classifier.py
recipes/: debug.yaml  vit_b_imagenet1k.yaml  vit_s_cifar10.yaml  vit_s_cifar100.yaml  vit_s_tiny.yaml
scripts/: compare_weights.py  convert_to_hf.py  evaluate_hf_ortho_vit.py  gen_preset.py  run_activation_debug.sh  run_debug_patterns.py  run_node_debug_checks.sh
src/ortho_residual/: __init__.py
src/ortho_residual.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ortho_residual/llama/: configuration_ortho_llama.py  modeling_ortho_llama.py  residual.py
src/ortho_residual/vit/: configuration_ortho_vit.py  modeling_ortho_vit.py  residual.py
